--- a/client/package.json
+++ b/client/package.json
@@ -16,17 +16,21 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/redux": "^3.6.0",
     "axios": "^0.26.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
+    "react-redux": "^7.2.6",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-slideshow-image": "^3.6.1",
     "react-transition-group": "^4.4.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.48.0",
     "swiper": "^8.0.3",
     "typescript": "^4.5.4",
