--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,17 @@
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
+    "amazon-cognito-identity-js": "^5.2.8",
+    "aws-sdk": "^2.1095.0",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.9.2"
   }
 }
